# slang-netlist

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  BuildProfile_8hpp.html  BuildProfile_8hpp.js  BuildProfile_8hpp_source.html  BuilderOptions_8hpp.html  BuilderOptions_8hpp.js  BuilderOptions_8hpp_source.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CombLoops_8hpp.html  CombLoops_8hpp.js  CombLoops_8hpp_source.html  Config_8hpp.html  Config_8hpp.js  Config_8hpp_source.html  CycleDetector_8hpp.html  CycleDetector_8hpp.js  CycleDetector_8hpp_source.html  DataFlowAnalysis_8hpp.html  Debug_8hpp.html  Debug_8hpp.js  Debug_8hpp_source.html  DepthFirstSearch_8hpp.html  DepthFirstSearch_8hpp.js  DepthFirstSearch_8hpp_source.html  DirectedGraph.hpp  DirectedGraph_8hpp.html  DirectedGraph_8hpp.js  DirectedGraph_8hpp_source.html  DriverBitRange_8hpp.html  DriverBitRange_8hpp.js  DriverBitRange_8hpp_source.html  DriverMap_8hpp.html  (+354 more)
.claude/skills/: architecture.md  code-coverage.md
.github/workflows/: benchmark.yml  build.yml  coverage.yml  docs.yml  pyproject.yml
bindings/python/: CMakeLists.txt  py_slang_netlist.cpp  pyslang_netlist.cpp
cmake/: CPM.cmake  tools.cmake
docker/ubuntu/: Dockerfile
docs/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  concat-cut-propagation-plan.md  conf.py  developer-guide.dox  developer.dox  expand-navtree.js  getting-started.dox  header.html  improvements.md  mainpage.dox  user-guide.dox
docs/pages/: about.dox
docs/plans/: 2026-03-07-serialisation-design.md  2026-03-07-serialisation.md
examples/: CMakeLists.txt  clock_domain_map.py  common.py  connectivity_check.py  constant_driven_sinks.py  driver_lookup.py  unconnected_inputs.py
include/: Config.h  Netlist.h  NetlistGraph.h  ProceduralAnalysis.h
include/common/: FormatBuffer.hpp  Utilities.hpp  Wildcard.hpp
include/netlist/: BuildProfile.hpp  BuilderOptions.hpp  CombLoops.hpp  Config.hpp  CycleDetector.hpp  DataFlowAnalysis.hpp  Debug.h  Debug.hpp  DepthFirstSearch.h  DepthFirstSearch.hpp  DirectedGraph.h  DirectedGraph.hpp  DriverBitRange.hpp  DriverMap.hpp  DriverTracker.hpp  DriverVisitor.hpp  ExternalManager.hpp  FlatNetlistGraph.hpp  IntervalMapUtils.hpp  LSPUtilities.hpp  NetlistBuilder.hpp  NetlistDiagnostics.hpp  NetlistDot.hpp  NetlistEdge.hpp  NetlistGraph.hpp  NetlistNode.hpp  NetlistPath.hpp  NetlistSerializer.hpp  NetlistVisitor.hpp  PathFinder.hpp  PendingRValue.hpp  ProceduralAnalysis.hpp  ReportDrivers.hpp  ReportPorts.hpp  ReportVariables.hpp  ReportingUtilities.hpp  SymbolReference.hpp  SymbolTracker.hpp  SymbolVisitor.hpp  TextLocation.hpp  (+4 more)
include/report/: ReportDrivers.hpp  ReportPorts.hpp  ReportVariables.hpp  ReportVisitorBase.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  (+90 more)
source/: BitSlice.hpp  BitSliceList.cpp  BitSliceList.hpp  BuildPipeline.cpp  BuildPipeline.hpp  CMakeLists.txt  CanonicalBodyResolver.cpp  CanonicalBodyResolver.hpp  CombLoops.cpp  CutRegistry.hpp  CycleDetector.hpp  DataFlowAnalysis.cpp  DataFlowAnalysis.hpp  DepthFirstSearch.hpp  DriverMap.hpp  DriverTracker.cpp  IntervalMapUtils.hpp  Netlist.cpp  NetlistBuilder.cpp  NetlistBuilder.hpp  NetlistGraph.cpp  NetlistNode.cpp  NetlistSerializer.cpp  NetlistVisitor.cpp  NodeFactory.cpp  NodeFactory.hpp  PathFinder.cpp  PendingRValue.hpp  PendingRvalueQueue.cpp  PendingRvalueQueue.hpp  PortConnectionHandler.cpp  PortConnectionHandler.hpp  SymbolTracker.cpp  ValueTracker.cpp  ValueTracker.hpp  VariableTracker.hpp  Wildcard.hpp
tests/: CMakeLists.txt  CycleDetectorTests.cpp  DepthFirstSearchTests.cpp  DirectedGraphTests.cpp  NetlistTests.cpp  PathTests.cpp  Test.cpp  Test.hpp
tests/bindings/: CMakeLists.txt
tests/bindings/python/: CMakeLists.txt  test_netlistgraph.py  test_netlistnode.py  test_reportdrivers.py
tests/driver/: CMakeLists.txt  comb-loop.sv  driver_tests.py  rca.sv
tests/report/: CMakeLists.txt  report_tests.py
tests/unit/: BitSliceTests.cpp  BlackBoxTests.cpp  BugTests.cpp  CMakeLists.txt  CombFanTests.cpp  CombLoopTests.cpp  ConcatTests.cpp  ConditionalTests.cpp  ConstantDriverTests.cpp  CycleDetectorTests.cpp  DatatypeTests.cpp  DepthFirstSearchTests.cpp  DiagnosticsTests.cpp  DirectedGraphTests.cpp  DriverMapTests.cpp  DriverTests.cpp  ExternalManagerTests.cpp  InstanceTests.cpp  InterfaceTests.cpp  IntervalMapTests.cpp  LoopTests.cpp  MiscTests.cpp  NetlistDotTests.cpp  NetlistInterfaceTests.cpp  NetlistTests.cpp  NonblockingAssignmentTests.cpp  ParallelTests.cpp  PathTests.cpp  PortTests.cpp  ReportTests.cpp  SequentialStateTests.cpp  SerializerTests.cpp  Test.cpp  Test.hpp  TextLocationTests.cpp  UtilityTests.cpp  ValueTrackerTests.cpp  VariableTrackerTests.cpp  WildcardTests.cpp
tests/utilities/: utilities.py
tiny-gpu/src/: controller.sv  core.sv  gpu.sv
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  driver.cpp
tools/report/: CMakeLists.txt  report.cpp
