[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "slang-netlist"
version = "0.11.0"
description = "Python bindings for analysing the source-level static connectivity of a SystemVerilog design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
