[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
CMAKE_INSTALL_LIBDIR = "."
BUILD_DOCS = "OFF"
ENABLE_PY_BINDINGS = "ON"

[project]
name = "slang-netlist"
version = "0.11.0"
description = "Python bindings for analysing the source-level static connectivity of a SystemVerilog design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
